[package]
name = "rsk"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-keccak = { version = "2", features = ["keccak"] }
tokio = { version = "1.52.3", features = ["full"] }

esplora-client = { version = "0.9", features = ["async"] }
bitcoin = "0.32"
num-bigint = "0.4.6"
